<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <Button
        android:id="@+id/activity_client_button_continuer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/activity_client_button_continuer_msg" />

    <EditText
        android:id="@+id/activity_client_prenom_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/activity_client_button_continuer"
        android:layout_marginBottom="87dp"
        android:layout_marginLeft="20dp"
        android:ems="10" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/activity_client_prenom_edit"
        android:layout_alignParentLeft="true"
        android:text="@string/activity_client_prenom"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="12dip" />

    <TextView
        android:id="@+id/activity_client_title_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="26dp"
        android:text="@string/activity_client_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/activity_client_name_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView6"
        android:layout_alignLeft="@+id/activity_client_prenom_edit"
        android:layout_marginBottom="57dp"
        android:ems="10" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="152dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/activity_client_name_edit"
        android:layout_alignParentLeft="true"
        android:text="@string/activity_client_name"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="12dip" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/activity_client_title_id"
        android:layout_marginTop="24dp"
        android:text="@string/activity_client_infos_client"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="14dip" />

    <Button
        android:id="@+id/activity_main_button_parck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/activity_main_button_parck_text" />

</RelativeLayout>