<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_parck_titlte"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/activity_parck_infos_text" />

            <Button
                android:id="@+id/activity_parck_toutes_voitures_button"
                android:layout_width="106dp"
                android:layout_height="wrap_content"
                android:text="@string/activity_parck_tte_voiture" />

        </LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/activity_parck_listview_listclient"
        android:layout_width="wrap_content"
        android:layout_height="340dip"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout1" >

    </ListView>

</RelativeLayout>